--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # Feel free to change these! For more info, refer to:
 # ~> https://jekyllrb.com/docs/configuration/options/
 
-title:            'IndianaWomensBasketball'
-description:      'to be updated.'
+title:            'Hoooosiers!'
+description:      'The fan culture of Indiana University Women's Basketball.'
 url:              'https://cegeib.github.io'
 baseurl:          '/IndianaWomensBasketball'
 copyright:        'to be updated'
