--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # Feel free to change these! For more info, refer to:
 # ~> https://jekyllrb.com/docs/configuration/options/
 
-title:            'Hoooosiers!'
+title:            'IndianaWomensBasketball'
 description:      'The fan culture of Indiana University Women's Basketball.'
 url:              'https://cegeib.github.io'
 baseurl:          '/IndianaWomensBasketball'
