--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ search:
 menu:
   - label: 'About'
     sub:
-      - label: 'Wax'
+      - label: "Indiana Women's Basketball"
         link: '/about/'
       - label: 'Documentation'
         link: 'https://minicomp.github.io/wiki/wax/'
