--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title:            'Go Hoosiers!'
 description:      "The fan culture of Indiana University Women's Basketball."
 url:              'https://cegeib.github.io'
 baseurl:          '/IndianaWomensBasketball'
-copyright:        'to be updated'
+copyright:        'Produced by Caroline Geib, Ruth Cronin, and Maddy Hildreth.'
 logo:             '/assets/logo.png'
 
 # ---------------------------------------------------------------
